--- a/language/data/languages/austronesian_languages.json
+++ b/language/data/languages/austronesian_languages.json
@@ -1,1 +1,7 @@
-[]
+[
+  {
+    "slug": "hawaiian_lang",
+    "subfamily_slug": "marquesic_lang_subfamily",
+    "wordbase_slug": "hawaiian_wb"
+  }
+]
